--- a/solr/solr-ref-guide/src/variables.adoc
+++ b/solr/solr-ref-guide/src/variables.adoc
@@ -19,8 +19,8 @@
 == The Let Expressions
 
 The `let` expression sets variables and and by default returns
-the last variable. The output of any streaming expression can be set
-to a variable.
+the value of the last variable. The output of any streaming expression or math expression
+can be set to a variable.
 
 Below is a simple example setting three variables `a`, `b`
 and `c`. `a` and `b` are set to arrays. The variable `c` is set
@@ -60,7 +60,7 @@ responds with:
 
 == Echoing Variables
 
-All variables can be output by setting the `echo` variable to `true`.
+All variables can be output by setting the *echo* variable to *true*.
 
 [source,text]
 ----
@@ -104,8 +104,8 @@ responds with:
 }
 ----
 
-A specific set of variables can be echoed by providing a comma delimitted
-list for the echo parameter.
+A specific set of variables can be echoed by providing a comma delimited
+list of variables to the echo parameter.
 
 [source,text]
 ----
@@ -143,4 +143,3 @@ responds with:
   }
 }
 ----
-
