--- a/solr/solr-ref-guide/src/numerical-analysis.adoc
+++ b/solr/solr-ref-guide/src/numerical-analysis.adoc
@@ -117,7 +117,140 @@ responds with:
 }
 ----
 
-=== Smoothing
+=== Smoothing Interpolation
+
+The `loess` function is a smoothing interpolator which means it doesn't derive
+a function that passes through the original control points. Instead the `loess` function
+returns a function that smooths the original control points.
+
+A technique known as local regression is used to compute the smoothed curve. Local regression
+performs a regression analysis for the k-nearest neighbors in the data set. Then
+a regression analysis between the next set of k-nearest neighbors is performed until
+a curve has been derived for the entire data set. The size of the neighborhood can be adjusted
+to control how close the new curve conforms to the original control points.
+
+The `loess` function is passed *x* and *y* axises and fits a smooth curve to the data.
+If only a single array is provided it is treated as the *y* axis and a sequence is generated
+for the *x* axis.
+
+The example below uses the `loess` function to fit a curve to a set of *y* values in an array.
+The bandwidth parameter defines the percent of data to use for the local
+regression. The lower the percent the smaller the neighborhood used for the local
+regression and the closer the curve will be to the original data.
+
+In the example the fitted curve is subtracted from the original curve using the
+`ebeSubtract` function. The output shows the error between the
+fitted curve and the original curve, known as the residuals. The output also includes
+the sum-of-squares of the residuals which provides a measure
+of how large the error is.
+
+[source,text]
+----
+let(echo="residuals, sumSqError",
+    y=array(0, 1, 2, 3, 4, 5.7, 6, 7, 7, 7,6, 7, 7, 7, 6, 5, 5, 3, 2, 1, 0),
+    curve=loess(y, bandwidth=.3),
+    residuals=ebeSubtract(y, curve),
+    sumSqError=sumSq(residuals))
+----
+
+When this expression is sent to the /stream handler it
+responds with:
+
+[source,json]
+----
+{
+  "result-set": {
+    "docs": [
+      {
+        "residuals": [
+          0,
+          0,
+          0,
+          -0.040524802275866634,
+          -0.10531988096456502,
+          0.5906115002526198,
+          0.004215074334896762,
+          0.4201374330912433,
+          0.09618315578013803,
+          0.012107948556718817,
+          -0.9892939034492398,
+          0.012014364143757561,
+          0.1093830927709325,
+          0.523166271893805,
+          0.09658362075164639,
+          -0.011433819306139625,
+          0.9899403519886416,
+          -0.011707983372932773,
+          -0.004223284004140737,
+          -0.00021462867928434548,
+          0.0018723112875456138
+        ],
+        "sumSqError": 2.8016013870800616
+      },
+      {
+        "EOF": true,
+        "RESPONSE_TIME": 0
+      }
+    ]
+  }
+}
+----
+
+In the next example the curve is fit using a bandwidth of .25. Notice that the curve
+is a closer fit, shown by the smaller residuals and lower value for the sum-of-squares of the
+residuals.
+
+[source,text]
+----
+let(echo="residuals, sumSqError",
+    y=array(0, 1, 2, 3, 4, 5.7, 6, 7, 6, 5, 5, 3, 2, 1, 0),
+    curve=polyfit(y, 5),
+    residuals=ebeSubtract(y, curve),
+    sumSqError=sumSq(residuals))
+----
+
+When this expression is sent to the /stream handler it
+responds with:
+
+[source,json]
+----
+{
+  "result-set": {
+    "docs": [
+      {
+        "residuals": [
+          0,
+          0,
+          0,
+          0,
+          -0.19117650587715396,
+          0.442863451538809,
+          -0.18553845993358564,
+          0.29990769020356645,
+          0,
+          0.23761890236245709,
+          -0.7344358765888117,
+          0.2376189023624491,
+          0,
+          0.30373119215254984,
+          -3.552713678800501e-15,
+          -0.23761890236245264,
+          0.7344358765888046,
+          -0.2376189023625095,
+          0,
+          2.842170943040401e-14,
+          -2.4868995751603507e-14
+        ],
+        "sumSqError": 1.7539413576337557
+      },
+      {
+        "EOF": true,
+        "RESPONSE_TIME": 0
+      }
+    ]
+  }
+}
+----
 
 
 == Derivatives
