--- a/solr/solr-ref-guide/src/numerical-analysis.adoc
+++ b/solr/solr-ref-guide/src/numerical-analysis.adoc
@@ -204,7 +204,7 @@ residuals.
 ----
 let(echo="residuals, sumSqError",
     y=array(0, 1, 2, 3, 4, 5.7, 6, 7, 6, 5, 5, 3, 2, 1, 0),
-    curve=polyfit(y, 5),
+    curve=loess(y, .25),
     residuals=ebeSubtract(y, curve),
     sumSqError=sumSq(residuals))
 ----
@@ -252,22 +252,23 @@ responds with:
 }
 ----
 
-
 == Derivatives
 
 The derivative of a function measures the rate of change of the *y* value in respects to the
 rate of change of the *x* value.
 
-The `derivative` function returns the derivative value at the control points of an interpolation
-function. Different interpolation functions will result in a different derivatives.
+The `derivative` function returns the derivative of each control point of an
+interpolated curve. The `derivative` function can also return a derivative of
+a derivative.
 
-A derivative can also be computed for a derivative.
-
-The example below computes a derivative using an `akima` spline interpolation.
+The example below computes a derivative of a `loess` interpolation.
 
 [source,text]
 ----
-
+let(x=array(0, 1, 2, 3, 4, 5, 6, 7, 8, 9,10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20),
+    y=array(0, 1, 2, 3, 4, 5.7, 6, 7, 7, 7,6, 7, 7, 7, 6, 5, 5, 3, 2, 1, 0),
+    curve=loess(x, y, bandwidth=.3),
+    derivative=derivative(curve))
 ----
 
 When this expression is sent to the /stream handler it
@@ -275,15 +276,58 @@ responds with:
 
 [source,json]
 ----
-
+{
+  "result-set": {
+    "docs": [
+      {
+        "derivative": [
+          1.0022002675659012,
+          0.9955994648681976,
+          1.0154018729613081,
+          1.0643674501141696,
+          1.0430879694757085,
+          0.9698717643975381,
+          0.7488201070357539,
+          0.44627000894357516,
+          0.19019561285422165,
+          0.01703599324311178,
+          -0.001908408138535126,
+          -0.009121607450087499,
+          -0.2576361507216319,
+          -0.49378951291352746,
+          -0.7288073815664,
+          -0.9871806872210384,
+          -1.0025400632604322,
+          -1.001836567536853,
+          -1.0076227586138085,
+          -1.0021524620888589,
+          -1.0020541789058157
+        ]
+      },
+      {
+        "EOF": true,
+        "RESPONSE_TIME": 0
+      }
+    ]
+  }
+}
 ----
-
 
 == Integrals
 
+An integral is a measure of the volume underneath a curve.
+The `integrate` function computes an integral for specific
+range of an interpolated curve.
+
+In the example below the `integrate` function computes an
+integral for the entire range of the curve, 0 through 20.
+
 [source,text]
 ----
-
+let(x=array(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20),
+    y=array(0, 1, 2, 3, 4, 5.7, 6, 7, 7, 7,6, 7, 7, 7, 6, 5, 5, 3, 2, 1, 0),
+    curve=loess(x, y, bandwidth=.3),
+    integral=integrate(curve,  0, 20))
 ----
 
 When this expression is sent to the /stream handler it
@@ -291,8 +335,54 @@ responds with:
 
 [source,json]
 ----
-
+{
+  "result-set": {
+    "docs": [
+      {
+        "integral": 90.17446104846645
+      },
+      {
+        "EOF": true,
+        "RESPONSE_TIME": 0
+      }
+    ]
+  }
+}
 ----
+
+In the next example an integral is computed for the range of 0 through 10.
+
+[source,text]
+----
+let(x=array(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20),
+    y=array(0, 1, 2, 3, 4, 5.7, 6, 7, 7, 7,6, 7, 7, 7, 6, 5, 5, 3, 2, 1, 0),
+    curve=loess(x, y, bandwidth=.3),
+    integral=integrate(curve,  0, 10))
+----
+
+When this expression is sent to the /stream handler it
+responds with:
+
+[source,json]
+----
+{
+  "result-set": {
+    "docs": [
+      {
+        "integral": 45.300912584519914
+      },
+      {
+        "EOF": true,
+        "RESPONSE_TIME": 0
+      }
+    ]
+  }
+}
+----
+
+
+
+
 
 == Bicubic Spline
 
